--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -23,7 +23,7 @@
     <main>
         <section class="content-section container">
             <h2 class="section-header">NFT Information</h2>
-            <img src="Images/NFTICON.png" alt="NFT Icon" class="nfticon">
+            <img src="NFTICON.png" alt="NFT Icon" class="nfticon">
             <p>NFTs are cryptographic tokens  – much like a cryptocurrency – that are recorded on a blockchain and can be used to prove the authenticity, ownership and provenance of anything – physical or non-physical – such as artwork, collectable cards, or real estate, for example, in much the same way as a blockchain can be used to settle financial transactions or track elements in a supply chain. “Non-fungible” implies the token is unique and cannot be duplicated or swapped for anything else (unlike individual bitcoins, for example, which are “fungible”). </p>
             <p>NFTs are not just for tokenising assets. They can also act as smart contracts – contracts that are programmed to automatically execute certain actions in certain conditions. So in the case of “Everydays”, for example, the NFT gives the originator of the token a cut of future sales, with Beeple receiving 10%. This can help artists to secure a reliable source of income – and more importantly perhaps, a chunk of future resale value. </p>
             <p>
@@ -114,17 +114,17 @@
                 <ul class="nav footer-nav">
                     <li>
                         <a href="https://www.youtube.com" target="_blank">
-                            <img src="Images/youtube-logo.png" alt="Youtube Logo">
+                            <img src="youtube-logo.png" alt="Youtube Logo">
                         </a>
                     </li>
                     <li>
                         <a href="https://www.facebook.com" target="_blank">
-                            <img src="Images/facebook-logo.png" alt="Facebook Logo">
+                            <img src="facebook-logo.png" alt="Facebook Logo">
                         </a>
                     </li>
                     <li>
                         <a href="https://www.twitter.com" target="_blank">
-                            <img src="Images/twitter-logo.png" alt="Twitter Logo">
+                            <img src="twitter-logo.png" alt="Twitter Logo">
                         </a>
                     </li>
                 </ul>
